# naga-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  naga.h
cli/: .gitignore  cli.c  compile.sh
src/: conv.rs  lib.rs
src/conv/: back.rs  compact.rs  front.rs  ir.rs  proc.rs  valid.rs
src/conv/back/: dot.rs  glsl.rs  hlsl.rs  msl.rs  pipeline_constant.rs  spv.rs  wgsl.rs
src/conv/front/: atmoic_upgrade.rs  glsl.rs  spv.rs  wgsl.rs
